select component bugs fixed z-index, clear selections, collapse when item chosen

--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -2,6 +2,7 @@
 
 .gerami-select-container {
   min-width: 230px;
+  z-index: 1;
 }
 
 .gerami-select-header {
@@ -12,6 +13,8 @@
   justify-content: space-evenly;
   padding: $padding-S;
   border-radius: $radius;
+  //position: relative;
+  //z-index: 1;
 }
 
 .gerami-select-placeholder {
@@ -29,6 +32,7 @@
 .gerami-multi-option-container {
   margin: 2px;
   background-color: #ededed;
+  z-index: 1;
 }
 
 .gerami-multi-option > i {
@@ -60,6 +64,7 @@
     }
   }
   .gerami-cancel-all {
+    z-index: 1;
     &:hover {
       color: $warn;
     }
@@ -77,7 +82,7 @@
   background-color: black;
 }
 .gerami-options-container {
-  z-index: 1;
+  z-index: 99;
   box-shadow: $shade-L;
   border-radius: $radius;
   background-color: $bg;
